# algorithm

./: .gitignore  404.html  5-LineChart.md  README.md  index.html  package-lock.json  package.json
0-书写规范/: 1-标题和段落.html  10-甘特图.html  11-实体关系图.html  2-列表和表格.html  3-代码.html  4-图片.html  5-数学公式.html  6-流程图.html  7-时序图.html  8-状态图.html  index.html
0-动态书写/: 1-模板语法.html  2-Vue基础.html  3-本地应用.html  4-网络应用.html
1-算法常识/: 1-算法设计原则.html  2-算法性能度量.html  index.html
1-设计模式/: 0-时序图.html  1-观察者模式.html  2-装饰者模式.html  index.html
10-数据结构总纲/: 1-数据结构分类.html  2-ADT.html
11-线性表/: 1-基本概念.html  2-结构对比.html  3-单链表.html
13-树/: 6-树的概念.html
15-排序算法/: 8.1-查找的概念.html  8.2-散列查找.html  9-排序.html
2-减治法/: 1-斐波那契数列.html  3-N皇后问题.html  index.html
2-递归结构/: 1-斐波那契数列.html  2-台阶问题.html  3-N皇后问题.html  index.html
21-basic/callback/: CMakeLists.txt  main.cpp
22-recursion/average_value/: CMakeLists.txt  main.cpp
22-recursion/fibnonacciv2/: CMakeLists.txt  main.cpp
22-recursion/fibonacci/: main.c
22-recursion/footstep/: main.c
22-recursion/footstepv2/: CMakeLists.txt  main.cpp
22-recursion/hanoi/: CMakeLists.txt
22-recursion/integer_factorization/: CMakeLists.txt
22-recursion/max_value/: CMakeLists.txt  main.cpp
22-recursion/numeral_system/: CMakeLists.txt
22-recursion/permutation/: CMakeLists.txt  main.cpp
22-recursion/queen/: CMakeLists.txt
23-divide_and_conconquer/binary_search/: main.cpp
23-divide_and_conconquer/gold/: CMakeLists.txt  main.cpp
23-divide_and_conconquer/merge_sort/: main.cpp
23-divide_and_conconquer/queen/: CMakeLists.txt  main.cpp
3-分治思想/: 1-金块问题.html  2-大整数乘法.html  3-快速排序.html  4-归并排序.html  index.html
3-分治法/: 1-金块问题.html  2-大整数乘法.html  3-快速排序.html  5-循环赛赛程.html  index.html
31-basic/1-assign/: CMakeLists.txt  main.cpp
33-class/10-4copy-constructor/: CMakeLists.txt  (+3 more)
4-贪婪法/: 4-归并排序.html  4-贪婪策略.html
5-回溯法/: 2-台阶问题.html  5-求子串.html  index.html
6-枚举法/: 1-鸡兔同笼.html
9-动态规划/: index.html
DataStructure/: README.md
DataStructure/linear/: CMakeLists.txt  linear.cpp  linear.h  list.h  main.cpp  test_linear.cpp  test_list.cpp  test_map.cpp  test_vector.cpp
DataStructure/recursion/: CMakeLists.txt  main.cpp  recursion.cpp  recursion.h  test_recursion.cpp
DataStructure/search/: CMakeLists.txt  main.cpp  search.h  test_search.cpp
DataStructure/tree/: CMakeLists.txt  btree.h  main.cpp  test_btree.cpp
aa/: CMakeCache.txt  CMakeLists.txt
abc/: CMakeCache.txt  CMakeLists.txt  main.cpp
design-patterns/: README.md
docs/: README.md
markdown/: 5-数学公式.md
vuepress/: 1-模板语法.md  3-本地应用.md
(+371 files in other folders)
